Archive item page default content updated to work with hide content per list view - CHANGED
Cornerstone builder now supported - ADDED
New Widget added `gd_post_address` that allows you to output the address formatted as you want it - ADDED
Ajax pagination added in GD Listings widget/shortcode - ADDED
Import export posts change non-standard post status - CHANGED

v2.0.0.48
Customify theme page layout compatibility settings added - ADDED
Ninja Forms conflicts backend on add/edit pages - FIXED
Listings + Location pages shows extra comma in meta title - FIXED
Beaver builder + Ninja forms can cause issues with compatibility settings - FIXED
Astra theme page layout compatibility settings added - ADDED
Newspaper theme page layout compatibility settings added - ADDED
Enfold theme page layout compatibility settings added - ADDED
Kleo theme page layout compatibility settings added - ADDED
Genesis theme page layout compatibility settings added - ADDED

v2.0.0.47
Edit post permalink button missing so not able to edit single permalink - FIXED
Radio button and text overlap on add listing page - FIXED
Twitter feed custom field no longer working - FIXED
Latest compatibility settings caused issue with some builders - FIXED

v2.0.0.46
Some custom fields should store is_default = 0 during v1 to v2 conversion - FIXED
Map markers not loading on tags page when show all posts enabled - FIXED
_x() does not translates string - FIXED
​Unable to translate business hours timepicker texts - FIXED​
​Unable to translate some strings - FIXED
​Review star not showing in OSM map popup - FIXED​
Post preview not showing map correctly if status is `auto-draft` - FIXED
Added no cache headers to the add listing page - ADDED
Added check to the save images function that the post exists first - ADDED
Comment cache not being cleared on add/edit/update - FIXED
Selects and radio inputs not showing as selected for zero (0) values - FIXED
Multi-select not fully deselecting for empty values - FIXED